# Local-Document-QA-Agent

./: README.md  main.py  pyproject.toml
chrome_langchain_db/: chroma.sqlite3
src/core/: config.py  interfaces.py
src/services/: embeddings_service.py  llm_service.py  vector_service.py
src/ui/: cli.py  gradio_app.py
