[project]
name = "localagentollama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.44.0",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-ollama>=0.3.7",
    "pandas>=2.3.2",
    "pypdf>=6.0.0",
]
